# FSNGX

./: .gitignore  CMakeLists.txt
FSNGX/include/: FSNGX.h
FSNGX/src/: CMakeLIsts.txt
doc/: libs.md
include/: FSNGX.h
src/: CMakeLIsts.txt  FSNGX.c  FSNGX_math.c  FSNGX_math.h
